<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="com.sagycorp.fitbeats.TimerActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:weightSum="3">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Ready"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="130sp"
            android:textStyle="bold"
            android:text="00"
            android:textColor="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="130sp"
            android:text=":"
            android:gravity="center_vertical"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="130sp"
            android:textStyle="bold"
            android:text="20"
            android:textColor="@color/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/setLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sets"
                    android:textSize="24sp"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" / "
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>

                    <TextView
                        android:id="@+id/finalSetNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cycleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cycles"
                    android:textSize="24sp"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cycleNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" / "
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>

                    <TextView
                        android:id="@+id/finalCycleNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:textColor="@color/textColor"
                        android:textSize="28sp"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/footerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/playLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/playPauseStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pause"
                        android:textSize="20sp"
                        android:textColor="@color/textColor"/>

                    <RelativeLayout
                        android:id="@+id/playPauseButtonLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/resumeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/ic_play_arrow"
                            android:layout_centerInParent="true"
                            android:visibility="gone"/>

                        <ImageButton
                            android:id="@+id/pauseButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/ic_pause"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalTimeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/remainingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remainingTime"
                        android:textSize="18sp"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:id="@+id/timeLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeExample"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resetLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:textSize="20sp"
                        android:textColor="@color/textColor"/>


                    <RelativeLayout
                        android:id="@+id/resetButtonLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/resetButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/ic_reset"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/pastleGreyColor"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/initialPlayButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/playButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_play_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Start"
                        android:textSize="20sp"
                        android:textColor="@color/textColor" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settingsButtonLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/settingsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textSize="20sp"
                        android:textColor="@color/textColor" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
